--- a/static/css/home.css
+++ b/static/css/home.css
@@ -8,46 +8,66 @@ h1 {
     color: #546e7a;
 }
 
-.dot {
-    margin: 4rem;
+  
+.choices {
+
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    padding: 1rem;
+    justify-content: space-evenly;
 
-  }
-
-.dot .show-list {
-    display: inline-block;
-    padding: 2rem;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    background-color: orange;
-    text-align: center;
-    
 }
 
-.dot .show-list a {
+.choices .show-list {
+    display: flex;
+    border: 0.2rem solid #ff9a3c;
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    padding: 1rem;
+    background-color:  #ffc93c;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.choices .show-list a {
+    
+    text-decoration: none;
     font-size: 1.5rem;
-    margin: 2rem;
+    color: darkslategray;
+    
+  
 }
+
 
     
 
-.dot .add-item {
-    display: inline-block;
-    padding: 2rem;
+.choices .add-item {
+    display: flex;
+    border: 0.2rem solid gray;
+    border-radius: 50%;
     height: 150px;
     width: 150px;
-    border-radius: 50%;
-    background-color: grey;
-    text-align: center;
-    font-size: 20px;
+    padding: 1rem;
+    background-color:  lightgray;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.choices .add-item a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #f97c07;
+  
 }
 
 hr {
+    margin-top: 5rem;
     border: none;
     border-top: 3px double #333;
-    color: navy;
+    color: darkslategray;
     overflow: visible;
     text-align: center;
     height: 5px;
@@ -55,14 +75,14 @@ hr {
 
 hr:after {
     background: rgb(217, 237, 243);
-    content: 'R';
+    content: 'Bulletin';
     padding: 0 4px;
     position: relative;
     top: -13px;
 }
 
 .alert {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #546e7a;
     padding: 2rem;
     text-align: left;
