--- a/templates/add.html
+++ b/templates/add.html
@@ -1,8 +1,10 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<div class="content">
+    <div class="form">
     <form action="/records" method="post">
-        <div>
+        <div class = "form-row">
             <label for="artist">Artist:</label>
             <select name="artist_id" id="artist">
                 {% for artist in all_artists  %}
@@ -10,47 +12,49 @@
                 {% endfor %}
 
             </select>
-            <p>Couldn't find the artist?<a href="/artists/add">Add Artist</a></p>
+            <div class="not-found">! Couldn't find the artist?  <a href="/artists/add">Add Artist</a></div>
         </div> 
-        <div>
+        <div class = "form-row">
             <label for="description">Title:</label>
             <input type="text" id="title" name="title" placeholder="Title" required autofocus>
         </div>
   
-        <div>
+        <div class = "form-row">
             <label for="genre">Genre:</label>
             <select name="genre" id="genre">
                 <option value="">SELECT</option>
-                <option value="folk">Folk</option>
-                <option value="jazz">Jazz</option>
-                <option value="classic">Classic</option>
-                <option value="pop">Pop & Rock</option>
+                <option value="Folk">Folk</option>
+                <option value="Jazz">Jazz</option>
+                <option value="Classic">Classic</option>
+                <option value="Pop">Pop & Rock</option>
 
             </select>
-            <p>Couldn't find the genre?<a href="/genre/add">Add Genre</a></p>
+            <!-- <p class="align-right">Couldn't find the genre?<a href="/genre/add">Add Genre</a></p> -->
         </div>
-        <div>
+        <div class = "form-row">
             <label for="year">Release Year: </label>
             <input type="number" name="year" id="year" placeholder="YYYY" min="1930" max="2022"required>
         </div>
   
-        <div>
+        <div class = "form-row">
             <label for="stock_count">Stock Count: </label>
             <input type="number" name="stock_count" id="stock_count" required>
         </div>
-        <div>
+        <div class = "form-row">
             <label for="buying_cost">Buying cost of each record: </label>
             <input type="number" min="0" value="0" step=".01" name="buying_cost" id="buying_cost" placeholder="£" required>
         </div>
-        <div>
+        <div class = "form-row">
             <label for="price">Set price of each record: </label>
             <input type="number" min="0" value="0" step=".01" name="price" id="price" placeholder="£" required>
-        </div>
+        </div class = "form-row">
         <button type="submit">Add This Record</button>
 
         <br>
 
         <br>
-        
+
     </form>
+</div>
+</div>
 {% endblock content %}
