--- a/templates/artists/index.html
+++ b/templates/artists/index.html
@@ -1,12 +1,17 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<p>Click the name to see the artist details</p>
+<div class="content">
+<div class="artist-list">
+<h3>Click the name to see the artist details
 {% for artist in all_artists %}
-    <div class = "name">
-        <a href="/artists/{{ artist.id }}">{{ artist.first_name }} {{ artist.last_name }}</a>
-    </div>
+    <h2>
+       <a href="/artists/{{ artist.id }}">&#119070; {{ artist.first_name }} {{ artist.last_name }}</a>
+
+
 
 {% endfor %}
 
+</div>
+</div>
 {% endblock %}
