--- a/templates/artists/show.html
+++ b/templates/artists/show.html
@@ -1,8 +1,11 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<div class="content">
+<h1>{{ artist.first_name }} {{ artist.last_name }}</h1>
 
-<p>{{ artist.first_name }} {{ artist.last_name }}</p>
+
+<div class="show-details">
 <p>Country: {{ artist.country }}</p>
 
 Stocked records by this artist:
@@ -18,6 +21,6 @@ Stocked records by this artist:
 
 <p><a href="/artists/{{ artist.id }}/edit">EDIT</a></p>
 
-
-
+</div>
+</div>
 {% endblock %}
