--- a/templates/records/show.html
+++ b/templates/records/show.html
@@ -4,7 +4,7 @@
 <div class="content">
 <h1>{{ record.title }}</h1>
 
-<h2>By {{  record.artist.first_name }} {{ record.artist.last_name }}</h2>
+<h2> <a href="/artists/{{ record.artist.id}}">By {{  record.artist.first_name }} {{ record.artist.last_name }} </a></h2>
 
 <div class="show-details">
 <p>Genre: {{ record.genre }}</p>
