tuesday desktop add

--- a/templates/records/edit.html
+++ b/templates/records/edit.html
@@ -1,13 +1,15 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<div class="content">
+    <div class="form">
 <form action="/records/{{ record.id }}" method="post">
-    <form action="/records" method="post">
-        <div>
+    <!-- <form action="/records" method="post"> -->
+        <div class="form-row">
             <label for="description">Title:</label>
             <input type="text" id="title" name="title" value="{{ record.title }}">
         </div>
-        <div>
+        <div class="form-row">
             <label for="artist">Artist:</label>
                 <select name="artist_id" id="artist">
                     {% for artist in all_artists  %}
@@ -17,7 +19,7 @@
     
                 </select>
             </div>   
-            <div>
+            <div class="form-row">
                 <label for="genre">Genre:</label>
                 <select name="genre" id="genre">
                     <option value="">SELECT</option>
@@ -30,27 +32,28 @@
                     <option value="classic">Classic</option>
                 </select>
             </div>
-            <div>
+            <div class="form-row">
                 <label for="year">Release Year: </label>
                 <input type="number" name="year" id="year" value="{{ record.year }}">
             </div>
       
-            <div>
+            <div class="form-row">
                 <label for="stock_count">Stock Count: </label>
                 <input type="number" name="stock_count" id="stock_count" value="{{ record.stock_count }}">
             </div>
-            <div>
+            <div class="form-row">
                 <label for="buying_cost">Buying cost of each record: </label>
                 <input type="number" min="0" value="{{ record.buying_cost }}" step=".01" name="buying_cost" id="buying_cost">
             </div>            
-            <div>
+            <div class="form-row">
                 <label for="price">Price: </label>
                 <input type="number" min="0" value="{{ record.price }}" step=".01" name="price" id="price">
-            </div>
+            </div class="form-row">
             
             <button type="submit">Update This Record</button>
         </form>
 
-
+</div>
+</div>
     
 {% endblock  %}
