--- a/templates/artists/edit.html
+++ b/templates/artists/edit.html
@@ -1,7 +1,27 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<div class="content">
+    <div class="form">
+<form action="/records/{{ artist.id }}" method="post">
+    <!-- <form action="/records" method="post"> -->
+        <div class="form-row">
+            <label for="artist_first_name">First Name:</label>
+            <input type="text" id="artist_first_name" name="artist_first_name" value="{{ artist.first_name }}">
+        </div>
+        <div class="form-row">
+            <label for="artist_second_name">Second Name:</label>
+            <input type="text" id="artist_second_name" name="artist_second_name" value="{{ artist.second_name }}">
+        </div>
+        <div class="form-row">
+            <label for="country">Country:</label>
+            <input type="text" id="country" name="country" value="{{ artist.country }}">
+        </div>
+            
+            <button type="submit">Update This Record</button>
+        </form>
 
-
-
-{% endblock %}
+</div>
+</div>
+    
+{% endblock  %}
